@@ -1,0 +1,3 @@
+This package provides special PGF/TikZ nodes for the text,
+marginpar, footer and header area of the current page. They are
+inspired by the 'current page' node defined by PGF/TikZ itself.
