@@ -1,0 +1,15 @@
+# $NetBSD: Makefile,v 1.1 2022/02/02 15:19:02 manu Exp $
+
+DISTNAME=	tikzpagenodes
+PKGNAME=	tex-${DISTNAME}-1.1
+TEXLIVE_REV=	56291
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	https://ctan.org/pkg/tikzpagenodes
+COMMENT=	Single TikZ node for the whole page
+LICENSE=	lppl-1.3c
+
+DEPENDS+=	tex-tools-[0-9]*:../../print/tex-tools
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
