@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2022/02/02 15:19:02 manu Exp $
+share/texmf-dist/tex/latex/tikzpagenodes/tikzpagenodes.sty
