@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.575 2022/02/02 15:06:43 manu Exp $
+$NetBSD: CHANGES-2022,v 1.576 2022/02/02 15:19:02 manu Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -749,3 +749,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated graphics/openexr to 3.1.4 [wiz 2022-02-02]
 	Updated textproc/hgrep to 0.2.3 [pin 2022-02-02]
 	Updated net/nagios-plugin-dotpid to 0.7 [manu 2022-02-02]
+	Added print/tex-tikzpagenodes version 1.1 [manu 2022-02-02]
